--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <div class="carousel-item active">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-1.jpg" alt="">
+                                <img src="assets/imgs/avatar-didit.jpg" alt="">
                                 <p>Pekerja keras, mampu bekerja sendiri maupun tim dan bisa diandalkan.</p>
                                 <h1 class="title">Didit Rukman</h1>
                                 <h1 class="subtitle">UI & UX design, FE, QA</h1>
@@ -466,7 +466,7 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-2.jpg" alt="">
+                                <img src="assets/imgs/avatar-fendi.jpg" alt="">
                                 <p>Cepat Beradaptasi</p>
                                 <h1 class="title">Fendi Setiabudi</h1>
                                 <h1 class="subtitle">Pranata Komputer KLHK</h1>
@@ -476,7 +476,7 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-3.jpg" alt="">
+                                <img src="assets/imgs/avatar-wisnu.jpg" alt="">
                                 <p>Miftah merupakan seseorang yang dietail oriented, tekun, cepat belajar dan dapat handling semua pekerjaan yang menjadi tanggung jawabnya</p>
                                 <h1 class="title">Wisnu Yudistirawan</h1>
                                 <h1 class="subtitle">Software Enginer, Cyber Security Consultant</h1>
@@ -486,7 +486,7 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-3.jpg" alt="">
+                                <img src="assets/imgs/avatar-tri.jpg" alt="">
                                 <p>Saya sangat senang bisa bekerja dengan Miftah dalam proyek ini. Dia selalu dapat dipercaya untuk menyelesaikan tugas tepat waktu dengan hasil yang sangat memuaskan. Selain itu dia juga sangat responsif dan selalu siap membantu ketika dibutuhkan. Saya merasa sangat neruntung bisa bekerja bersama Miftah dan saya yakin dia akan menjadi aset berharga untuk setiap tim di masa depan</p>
                                 <h1 class="title">Triono Hidayat</h1>
                                 <h1 class="subtitle">Software Manager</h1>
@@ -496,7 +496,7 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-3.jpg" alt="">
+                                <img src="assets/imgs/avatar-haris.jpg" alt="">
                                 <p>Inovatif, responsif dan asik kerjasamanya, thanks</p>
                                 <h1 class="title">Abdul Haris</h1>
                                 <h1 class="subtitle">SPV Retail Development SAP Express Pusat</h1>
