--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p>Fullstack Developer, Database & System Administrator</p>
 
                 <div class="buttons pt-3">
-                    <button class="btn btn-sm btn-primary rounded">HIRE ME</button>
+                    <a class="btn btn-sm btn-primary rounded" href="https://wa.link/kc0ehi" target="_blank">HIRE ME</a>
                     <button class="btn btn-sm btn-dark rounded">DOWNLOAD CV</button>
                 </div>
 
@@ -581,7 +581,7 @@
                             <p class="mb-3">Dengan pengalaman yang cukup dan memprioritaskan ketepatan dan kecepatan.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
-                            <button class="btn btn-light rounded">Hire Me!</button>
+                            <a class="btn btn-light rounded" href="https://wa.link/kc0ehi" target="_blank">Hire Me!</a>
                         </div>
                     </div>
                 </div>
@@ -617,9 +617,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="map d-none">
-            <!-- <iframe src="https://snazzymaps.com/embed/61257"></iframe> -->
         </div>
     </section>
     <!-- End of Contact Section -->
