--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p>Fullstack Developer, Database & System Administrator</p>
 
                 <div class="buttons pt-3">
-                    <a class="btn btn-sm btn-primary rounded" href="https://wa.link/kc0ehi" target="_blank">HIRE ME</a>
+                    <a class="btn btn-sm btn-primary rounded text-dark" href="https://wa.link/kc0ehi" target="_blank">HIRE ME</a>
                     <button class="btn btn-sm btn-dark rounded">DOWNLOAD CV</button>
                 </div>
 
@@ -581,7 +581,7 @@
                             <p class="mb-3">Dengan pengalaman yang cukup dan memprioritaskan ketepatan dan kecepatan.</p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
-                            <a class="btn btn-light rounded" href="https://wa.link/kc0ehi" target="_blank">Hire Me!</a>
+                            <a class="btn btn-light rounded text-dark" href="https://wa.link/kc0ehi" target="_blank">Hire Me!</a>
                         </div>
                     </div>
                 </div>
