--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="buttons pt-3">
                     <a class="btn btn-sm btn-primary rounded" href="https://wa.link/kc0ehi" target="_blank">HIRE ME</a>
-                    <button class="btn btn-sm btn-dark rounded">DOWNLOAD CV</button>
+                    <a class="btn btn-sm btn-dark rounded" href="assets/files/cv.pdf" download="">DOWNLOAD CV</a>
                 </div>
 
                 <div class="socials mt-4">
