--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="buttons pt-3">
                     <a class="btn btn-sm btn-primary rounded" href="https://wa.link/kc0ehi" target="_blank">HIRE ME</a>
-                    <a class="btn btn-sm btn-dark rounded" href="assets/files/cv.pdf" download="">DOWNLOAD CV</a>
+                    <a class="btn btn-sm btn-dark rounded" href="assets/files/cv.pdf" download>DOWNLOAD CV</a>
                 </div>
 
                 <div class="socials mt-4">
@@ -109,7 +109,7 @@
                     <p class="subtitle">Fullstack Developer & System Administrator</p>
                     <p>Hi, Saya Miftah. Saya merupakan seorang <b>Fullstack Developer</b> dan juga <b>Database & System Administrator</b>. Saya sangat berpengalaman dalam membuat dan mengembangkan website, serta memiliki pengalaman juga di bidang Design (UI & UX Designer)</p>
                     <p>Saya merupakan orang yang senang berwisata dan mencoba hal unik & baru. Memiliki kepribadian yang religius dan menjunjung tinggi kejujuran. Saya juga humoris dan suka berteman.</p>
-                    <button class="btn btn-sm btn-primary rounded mt-3">UNDUH CV</button>
+                    <a class="btn btn-sm btn-primary rounded mt-3" href="assets/files/cv.pdf" download>UNDUH CV</a>
                 </div>
             </div>
         </div>
