--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="assets/css/steller.css">
     <!-- Link Icon -->
     <link rel="shortcut icon" href="assets/imgs/icon.png" type="image/x-icon">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNL61SBW1G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MNL61SBW1G');
+</script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
