--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Miftah Portofolio Programmer, DBA, System Administrator & IT Developer">
+    <meta name="keywords" content="miftah, programmer, fullstack, webdev, IT Programmer, Miftah IT, Developer PHP">
     <meta name="author" content="Miftah">
     <title>Portofolio | Programmer & IT | Miftah</title>
     <!-- font icons -->
