--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Miftah Portofolio Programmer, DBA, System Administrator & IT Developer">
-    <meta name="keywords" content="miftah, programmer, fullstack, webdev, IT Programmer, Miftah IT, Developer PHP">
+    <!-- Primary Meta Tags -->
+<title>Miftah Portofolio - IT Programmer & FullStack Developer</title>
+<meta name="title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
+<meta name="description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
+<meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
+<meta property="twitter:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <meta name="author" content="Miftah">
-    <title>Portofolio | Programmer & IT | Miftah</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
