--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://miftah30.github.io/">
 <meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="assets/imgs/man.svg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://miftah30.github.io/">
 <meta property="twitter:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="twitter:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="twitter:image" content="assets/imgs/man.svg">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta name="author" content="Miftah">
     <!-- font icons -->
