update image open graph

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <meta property="og:url" content="https://miftah30.github.io/">
 <meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="og:image" content="assets/imgs/man.svg">
+<meta property="og:image" content="assets/imgs/avatar.svg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://miftah30.github.io/">
 <meta property="twitter:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="twitter:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="twitter:image" content="assets/imgs/man.svg">
+<meta property="twitter:image" content="assets/imgs/avatar.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta name="author" content="Miftah">
@@ -129,7 +129,7 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/avatar.svg" alt="" class="img-thumbnail mb-4">
+                    <img src="assets/imgs/avatar.svg" alt="Miftah" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Miftahuddin</h6>
