--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <meta property="og:url" content="https://miftah30.github.io/">
 <meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="og:image" content="assets/imgs/avatar.svg">
+<meta property="og:image" content="assets/imgs/MTH.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://miftah30.github.io/">
 <meta property="twitter:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="twitter:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="twitter:image" content="assets/imgs/avatar.svg">
+<meta property="twitter:image" content="assets/imgs/MTH.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta name="author" content="Miftah">
