update open graph

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
 <meta property="og:image" content="assets/imgs/MTH.png">
+<meta property="og:image:alt" content="Miftah Portofolio">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
