--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/avatar.svg" alt="Miftah" class="img-thumbnail mb-4">
+                    <img src="assets/imgs/avatar-miftah.png" alt="Miftah" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Miftahuddin</h6>
@@ -326,7 +326,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Genpi.co wilayah Jawa Timur</h5>
-                                <a href="https://jatim.genpi.co"><i class="ti-eye"></i></a>
+                                <a href="https://jatim.genpi.co" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://jatim.genpi.co" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Genpi.co Ramadhan</h5>
-                                <a href="https://www.genpi.co/ramadan"><i class="ti-eye"></i></a>
+                                <a href="https://www.genpi.co/ramadan" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://www.genpi.co/ramadan" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -358,7 +358,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Pelayanan RS Bayi Tabung Morula IVF Jakarta</h5>
-                                <a href="https://artichan.morulaivf.co.id/userman/auth"><i class="ti-eye"></i></a>
+                                <a href="https://artichan.morulaivf.co.id/userman/auth" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://artichan.morulaivf.co.id/userman/auth" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -368,7 +368,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>E Pengelolaan Arsip Nasional</h5>
-                                <a href="https://anri.go.id/login"><i class="ti-eye"></i></a>
+                                <a href="https://anri.go.id/login" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://anri.go.id/login" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -378,7 +378,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>GKI Camar</h5>
-                                <a href="https://gkicamar.org/"><i class="ti-eye"></i></a>
+                                <a href="https://gkicamar.org/" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://gkicamar.org/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -388,7 +388,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>stp-digital</h5>
-                                <a href="https://stp-digital.com/"><i class="ti-eye"></i></a>
+                                <a href="https://stp-digital.com/" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://stp-digital.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -400,7 +400,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Haier Asset Aqua Japan</h5>
-                                <a href="https://aquajapanid.com/"><i class="ti-eye"></i></a>
+                                <a href="https://aquajapanid.com/" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://aquajapanid.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -410,7 +410,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>SIMRS Harum Sisma Medika Bekasi</h5>
-                                <a href="https://harumsismamedika.com/"><i class="ti-eye"></i></a>
+                                <a href="https://harumsismamedika.com/" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://harumsismamedika.com/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -430,7 +430,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi RPHJP</h5>
-                                <a href="https://rphjpkph.menlhk.go.id/portal.php"><i class="ti-eye"></i></a>
+                                <a href="https://rphjpkph.menlhk.go.id/portal.php" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://rphjpkph.menlhk.go.id/portal.php" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -442,7 +442,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi Penatausahaan Hasil Hutan</h5>
-                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login"><i class="ti-eye"></i></a>
+                                <a href="https://sipuhh.phl.menlhk.go.id/auth/login" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://sipuhh.phl.menlhk.go.id/auth/login" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -452,7 +452,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Market Place Kitakirim</h5>
-                                <a href="https://kitakirim.id/"><i class="ti-eye"></i></a>
+                                <a href="https://kitakirim.id/" target="_blank"><i class="ti-eye"></i></a>
                                 <a href="https://kitakirim.id/" class="d-none"><i class="ti-link"></i></a>
                             </div>
                         </div>
