--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://miftah30.github.io/">
 <meta property="og:title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta property="og:description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
-<meta property="og:image" content="https:/miftah30.github.io/assets/imgs/avatar-miftah.png">
+<meta property="og:image" content="https://miftah30.github.io/assets/imgs/avatar-miftah.png">
 <meta property="og:image:alt" content="Miftah Portofolio">
 
 <!-- Twitter -->
