--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Miftah Portofolio - IT Programmer & FullStack Developer</title>
 <meta name="title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
 <meta name="description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
+<meta property="fb:app_id" content="910309190160390">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
