--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Primary Meta Tags -->
 <title>Miftah Portofolio - IT Programmer & FullStack Developer</title>
 <meta name="title" content="Miftah Portofolio - IT Programmer & FullStack Developer">
-<meta name="description" content="Saya adalah seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
+<meta name="description" content="Saya Miftah, seorang profesional IT Programmer, FullStack Developer & Database & System Administrator.">
 <meta name="keywords" content="MIFTAH,PORTOFOLIO,IT PROGRAMMER,FULLSTACK,DEVELOPER,WEBSITE,MIFTAH PORTOFOLIO">
 <meta property="fb:app_id" content="910309190160390">
 
@@ -27,6 +27,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta name="author" content="Miftah">
+    <meta name="canonical" content="https://miftah30.github.io">
+    <meta name="robots" content="index, follow">
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
