--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-wisnu.jpg" alt="">
-                                <p>Miftah merupakan seseorang yang dietail oriented, tekun, cepat belajar dan dapat handling semua pekerjaan yang menjadi tanggung jawabnya</p>
+                                <p>Miftah merupakan seseorang yang detail oriented, tekun, cepat belajar dan dapat menghandling semua pekerjaan yang menjadi tanggung jawabnya</p>
                                 <h1 class="title">Wisnu Yudistirawan</h1>
                                 <h1 class="subtitle">Software Enginer, Cyber Security Consultant</h1>
                             </div>
