--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <h6 class="subtitle">Layanan</h6>
             <h6 class="section-title mb-4">Apa yang kamu cari ?</h6>
             <p class="mb-5 pb-4">Selalu memperioritaskan ketepatan dan kecepatan dalam mengembangkan ide maupun memecahkan masalah. <br>
-                Adapun beberapa layanan yang saya kuasai.</p>
+                Beberapa layanan yang saya kuasai.</p>
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
@@ -495,55 +495,67 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-didit.jpg" alt="">
+                                <img src="assets/imgs/avatar-didit.jpg" alt="Didit Rukmana">
                                 <p>Pekerja keras, mampu bekerja sendiri maupun tim dan bisa diandalkan.</p>
-                                <h1 class="title">Didit Rukman</h1>
-                                <h1 class="subtitle">UI & UX design, FE, QA</h1>
+                                <h2 class="title">Didit Rukmana</h2>
+                                <h2 class="subtitle">UI & UX design, FE, QA</h2>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-fendi.jpg" alt="">
+                                <img src="assets/imgs/avatar-fendi.jpg" alt="Fendi Setiabudi">
                                 <p>Cepat Beradaptasi</p>
-                                <h1 class="title">Fendi Setiabudi</h1>
-                                <h1 class="subtitle">Pranata Komputer KLHK</h1>
+                                <h2 class="title">Fendi Setiabudi</h2>
+                                <h2 class="subtitle">Pranata Komputer KLHK</h2>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-wisnu.jpg" alt="">
+                                <img src="assets/imgs/avatar-wisnu.jpg" alt="Wisnu Yudistirawan">
                                 <p>Miftah merupakan seseorang yang detail oriented, tekun, cepat belajar dan dapat menghandling semua pekerjaan yang menjadi tanggung jawabnya</p>
-                                <h1 class="title">Wisnu Yudistirawan</h1>
-                                <h1 class="subtitle">Software Enginer, Cyber Security Consultant</h1>
+                                <h2 class="title">Wisnu Yudistirawan</h2>
+                                <h2 class="subtitle">Software Enginer, Cyber Security Consultant</h2>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-tri.jpg" alt="">
+                                <img src="assets/imgs/avatar-tri.jpg" alt="Triono Hodayat">
                                 <p>Saya sangat senang bisa bekerja dengan Miftah dalam proyek ini. Dia selalu dapat dipercaya untuk menyelesaikan tugas tepat waktu dengan hasil yang sangat memuaskan. Selain itu dia juga sangat responsif dan selalu siap membantu ketika dibutuhkan. Saya merasa sangat neruntung bisa bekerja bersama Miftah dan saya yakin dia akan menjadi aset berharga untuk setiap tim di masa depan</p>
-                                <h1 class="title">Triono Hidayat</h1>
-                                <h1 class="subtitle">Software Manager</h1>
+                                <h2 class="title">Triono Hidayat</h2>
+                                <h2 class="subtitle">Software Manager</h2>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-haris.jpg" alt="">
+                                <img src="assets/imgs/avatar-haris.jpg" alt="Abdul Haris">
                                 <p>Inovatif, responsif dan asik kerjasamanya, thanks</p>
-                                <h1 class="title">Abdul Haris</h1>
-                                <h1 class="subtitle">SPV Retail Development SAP Express Pusat</h1>
+                                <h2 class="title">Abdul Haris</h2>
+                                <h2 class="subtitle">SPV Retail Development SAP Express Pusat</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card testimonial-card border">
+                            <div class="card-body">
+                                <img src="assets/imgs/avatar-luki.jpg" alt="Luki Sanjaya">
+                                <p>Skillnya recommended, bisa PHP, MySQL, Elasticseach, Redis, Memcache, Javascript.
+                                    Fullstack dah pokoknya ...</p>
+                                <h2 class="title">Luki Sanjaya</h2>
+                                <h2 class="subtitle">Lead Web Developer - GenPi.co</h2>
                             </div>
                         </div>
                     </div>
