--- a/index.html
+++ b/index.html
@@ -559,6 +559,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <div class="card testimonial-card border">
+                            <div class="card-body">
+                                <img src="assets/imgs/avatar-ardi.jpg" alt="Nofiardi">
+                                <p>Cukup baik dalam bekerja</p>
+                                <h2 class="title">Nofiardi</h2>
+                                <h2 class="subtitle">Senior Staff Business Digital Development</h2>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
