--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="card testimonial-card border">
+                        <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-luki.jpg" alt="Luki Sanjaya">
                                 <p>Skillnya recommended, bisa PHP, MySQL, Elasticseach, Redis, Memcache, Javascript.
@@ -560,7 +560,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="card testimonial-card border">
+                        <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-ardi.jpg" alt="Nofiardi">
                                 <p>Cukup baik dalam bekerja</p>
