--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-7.png" alt="Harum Sisma Medika">
+                        <img src="assets/imgs/folio-7.webp" alt="Harum Sisma Medika">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>SIMRS Harum Sisma Medika Bekasi</h5>
@@ -432,7 +432,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-8.png" alt="SI Tanam">
+                        <img src="assets/imgs/folio-8.webp" alt="SI Tanam">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>SI Tanam</h5>
@@ -442,7 +442,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-9.png" alt="Sistem Informasi RPHJP">
+                        <img src="assets/imgs/folio-9.webp" alt="Sistem Informasi RPHJP">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi RPHJP</h5>
@@ -454,7 +454,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-11.png" alt="SIPUH">
+                        <img src="assets/imgs/folio-11.webp" alt="SIPUH">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Sistem Informasi Penatausahaan Hasil Hutan</h5>
@@ -464,7 +464,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-12.png" alt="Kitakirim">
+                        <img src="assets/imgs/folio-12.webp" alt="Kitakirim">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Market Place Kitakirim</h5>
@@ -563,7 +563,7 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-ardi.jpg" alt="Nofiardi">
+                                <img src="assets/imgs/avatar-ardi.webp" alt="Nofiardi">
                                 <p>Cukup baik dalam bekerja</p>
                                 <h2 class="title">Nofiardi</h2>
                                 <h2 class="subtitle">Senior Staff Business Digital Development</h2>
