--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="socials mt-4">
-                    <a class="social-item" href="https://www.facebook.com/M.AnonyMouse" target="_blank"><i
+                    <a class="social-item" href="https://www.facebook.com/Miftah303" target="_blank"><i
                             class="ti-facebook"></i></a>
                     <a class="social-item" href="https://www.instagram.com/miftah.30/" target="_blank"><i
                             class="ti-instagram"></i></a>
@@ -744,7 +744,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
-                        <a class="social-item" href="https://www.facebook.com/M.AnonyMouse" target="_blank"><i
+                        <a class="social-item" href="https://www.facebook.com/Miftah303" target="_blank"><i
                                 class="ti-facebook"></i></a>
                         <a class="social-item" href="https://www.instagram.com/miftah.30/" target="_blank"><i
                                 class="ti-instagram"></i></a>
