change url facebook

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 Beberapa layanan yang saya kuasai.</p>
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-crown"></i>
                             <h5>Fullstack Developer</h5>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-server"></i>
                             <h5>Database & System Administrator</h5>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-lock"></i>
                             <h5>Security Administrator</h5>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-heart"></i>
                             <h5>UI/UX Design</h5>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-desktop"></i>
                             <h5>Web Design</h5>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-mobile"></i>
                             <h5>Responsive Design</h5>
@@ -226,7 +226,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
                             <h5>SEO</h5>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
+                    <div class="custom-card card border min-vh-225">
                         <div class="card-body">
                             <i class="icon ti-star"></i>
                             <h5>Digital Ads</h5>
