--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                 <p>Saya sangat senang bisa bekerja dengan Miftah dalam proyek ini. Dia selalu dapat
                                     dipercaya untuk menyelesaikan tugas tepat waktu dengan hasil yang sangat memuaskan.
                                     Selain itu dia juga sangat responsif dan selalu siap membantu ketika dibutuhkan.
-                                    Saya merasa sangat neruntung bisa bekerja bersama Miftah dan saya yakin dia akan
+                                    Saya merasa sangat beruntung bisa bekerja bersama Miftah dan saya yakin dia akan
                                     menjadi aset berharga untuk setiap tim di masa depan</p>
                                 <h2 class="title">Triono Hidayat</h2>
                                 <h2 class="subtitle">Software Manager</h2>
