--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <img src="assets/imgs/avatar-miftah.png" alt="Miftah" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
-                    <h6 class="title">Miftahuddin</h6>
+                    <h6 class="title">About Me</h6>
                     <p class="subtitle">Fullstack Developer & System Administrator</p>
                     <p>Hi, Saya Miftah. Saya merupakan seorang <b>Fullstack Developer</b> dan juga <b>Database & System
                             Administrator</b>. Saya sangat berpengalaman dalam membuat dan mengembangkan website, serta
